objects/Enhancement_Request__c.object
<CustomObject>
    <fields>
        <fullName>ARA_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARA Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Contact__r.Account.Cvent_Account_ID__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shut_Down_Closed_Lost_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Shut Down/ Closed Lost Details</label>
        <referenceTo>Account_Shut_Down_Details__c</referenceTo>
        <relationshipLabel>Enhancement Requests</relationshipLabel>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enhancement Requests</relationshipLabel>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Functional area of the application that the request applies to.</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Setup-Licenses​</fullName>
                </value>
                <value>
                    <fullName>Administration-Administration ​General</fullName>
                </value>
                <value>
                    <fullName>​​Administration-Answer Formats</fullName>
                </value>
                <value>
                    <fullName>Administration-Contact Websites</fullName>
                </value>
                <value>
                    <fullName>Administration-Custom Fields</fullName>
                </value>
                <value>
                    <fullName>Administration-Custom URL / Domain</fullName>
                </value>
                <value>
                    <fullName>Administration-Editors and Lead Coordinators</fullName>
                </value>
                <value>
                    <fullName>Administration-Email Settings</fullName>
                </value>
                <value>
                    <fullName>Administration-External Calendar</fullName>
                </value>
                <value>
                    <fullName>Administration-Floor Plans</fullName>
                </value>
                <value>
                    <fullName>Administration-General</fullName>
                </value>
                <value>
                    <fullName>Administration-Image Editor</fullName>
                </value>
                <value>
                    <fullName>Administration-Lead Scoring</fullName>
                </value>
                <value>
                    <fullName>Administration-Libraries</fullName>
                </value>
                <value>
                    <fullName>Administration-Onsite User Logins</fullName>
                </value>
                <value>
                    <fullName>Administration-Other</fullName>
                </value>
                <value>
                    <fullName>Administration-Password Reset / Locked</fullName>
                </value>
                <value>
                    <fullName>Administration-Revenue/Profit Targets</fullName>
                </value>
                <value>
                    <fullName>Administration-RFP Labels</fullName>
                </value>
                <value>
                    <fullName>Administration-Rooms</fullName>
                </value>
                <value>
                    <fullName>Administration-Spaces</fullName>
                </value>
                <value>
                    <fullName>Administration-User Creation</fullName>
                </value>
                <value>
                    <fullName>Administration-User Groups</fullName>
                </value>
                <value>
                    <fullName>Administration-User Roles</fullName>
                </value>
                <value>
                    <fullName>Administration-User Roles - Permissions</fullName>
                </value>
                <value>
                    <fullName>Administration-User Roles - Properties</fullName>
                </value>
                <value>
                    <fullName>Administration-Users</fullName>
                </value>
                <value>
                    <fullName>Administration-Users, Groups &amp; Roles</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Admission Items</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Item Availability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Case__c</fullName>
        <inlineHelpText>Provide the “why.” How will this feedback/solution help the customer? What is their current process?</inlineHelpText>
        <label>Business Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enhancement Requests</relationshipLabel>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Business_Case__c</fullName>
        <inlineHelpText>Provide the proposed solution or specifically the answer to "What did the customer ask for?"</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Existing_Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related request (if this request is a duplicate).</description>
        <inlineHelpText>If this is a duplicate request, use this field to identify the existing request. Only requests that were set to "Reviewed - New" will be available to select.</inlineHelpText>
        <label>Existing/Related Request</label>
        <referenceTo>Enhancement_Request__c</referenceTo>
        <relationshipLabel>Enhancement Requests</relationshipLabel>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Released__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Market__c</fullName>
        <label>International Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Market-Specific/USA</fullName>
                    <default>true</default>
                    <label>Not Market-Specific/USA</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Europe/UK</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>UAE/Middle East</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Other (provide in description)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_suitable_workaround__c</fullName>
        <label>Is there a suitable workaround?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding</label>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Enhancement Requests</relationshipLabel>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Account_Number_s__c</fullName>
        <description>Other accounts that have requested (or would benefit) from this enhancement.</description>
        <inlineHelpText>Other accounts that have requested (or would benefit) from this enhancement. Comma separated. (i.e. "CVENTVA001, CCOMPOR002")</inlineHelpText>
        <label>Other Account Number(s)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Comments__c</fullName>
        <label>PM Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Internal__c</fullName>
        <label>PM Internal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PM_Priority__c</fullName>
        <label>PM Priority</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>​Abstract Management</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
                <value>
                    <fullName>CSN - Planners</fullName>
                </value>
                <value>
                    <fullName>CSN - Search &amp; DG</fullName>
                </value>
                <value>
                    <fullName>CSN - Suppliers</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Lead Scoring</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions</fullName>
                </value>
                <value>
                    <fullName>SMM</fullName>
                </value>
                <value>
                    <fullName>SocialWall</fullName>
                </value>
                <value>
                    <fullName>SpeedRFP/EMI</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
                <value>
                    <fullName>Acceptable</fullName>
                </value>
                <value>
                    <fullName>Unacceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Quality__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lack of Detail</fullName>
                </value>
                <value>
                    <fullName>Lack of Product Knowledge​</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Backlog_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Backlog Item</label>
        <referenceTo>Backlog_Item__c</referenceTo>
        <relationshipLabel>Related Enhancement Requests</relationshipLabel>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <formula>TEXT(Related_Backlog_Item__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>IF(TEXT(Related_Backlog_Item__r.Status__c) = "Closed - Released", TEXT(Related_Backlog_Item__r.Release__c), "N/A")</formula>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>More Information Needed</fullName>
                </value>
                <value>
                    <fullName>Under Consideration</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
                <value>
                    <fullName>Not Planned</fullName>
                </value>
                <value>
                    <fullName>On Roadmap</fullName>
                </value>
                <value>
                    <fullName>Existing Feature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Type__c</fullName>
        <description>Origin of the request.</description>
        <inlineHelpText>Origin of the request.</inlineHelpText>
        <label>Requester Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                    <default>true</default>
                    <label>Client</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requesters_Priority__c</fullName>
        <description>Requester's priority based on impact to the requesting client(s)/prospect(s).</description>
        <inlineHelpText>Priority of the individual or group that is making the request. If this is an internal request, provide your priority</inlineHelpText>
        <label>Requester's Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_because_of_a_state_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required because of a state policy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAT_Rep__c</fullName>
        <formula>Text(Contact__r.Account.SAT_Rep__c)</formula>
        <label>SAT Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Experience</fullName>
                </value>
                <value>
                    <fullName>Backend</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_to_the_overall_client_base__c</fullName>
        <label>Value to the overall client base?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workaround_Details__c</fullName>
        <label>Workaround Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Enhancement Request</label>
    <nameField>
        <label>Enhancement Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhancement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Ahnaf_s_View</fullName>
        <columns>NAME</columns>
        <columns>PM_Comments__c</columns>
        <columns>Description_Business_Case__c</columns>
        <columns>Date_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>session group</value>
        </filters>
        <label>Ahnaf's View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Description_Business_Case__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Business_Case__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>package</value>
        </filters>
        <label>Allie's Enhancements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Survey_and_eM_ERs_Not_Reviewed</fullName>
        <columns>Value_to_the_overall_client_base__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Area__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>eMarketing,Survey</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Not Reviewed</value>
        </filters>
        <label>All Survey &amp; eM ERs- Not Reviewed-Jun</label>
        <language>en_US</language>
        <sharedTo>
            <group>Tech_PMs_Survey</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Survey_and_eM_ERs_Not_Reviewed1</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Value_to_the_overall_client_base__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Description_Business_Case__c</columns>
        <columns>Requesters_Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Survey</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/16/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>4/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All Survey and eM ERs- Not Reviewed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Tech_PMs_Survey</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Survey_eM_ERs_import</fullName>
        <columns>Value_to_the_overall_client_base__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Area__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Survey</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2010 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Manage Invitees/Respondents-Imports</value>
        </filters>
        <label>All Survey &amp; eM ERs- import</label>
        <language>en_US</language>
        <sharedTo>
            <group>Tech_PMs_Survey</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_more_detail</fullName>
        <columns>Product__c</columns>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>PM_Comments__c</columns>
        <columns>PM_Internal__c</columns>
        <columns>PM_Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Related_Backlog_Item__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed View, All Enhancements</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Enhancments</fullName>
        <columns>NAME</columns>
        <columns>Description_Business_Case__c</columns>
        <columns>Is_there_a_suitable_workaround__c</columns>
        <columns>PM_Comments__c</columns>
        <columns>Release_Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>rfp report</value>
        </filters>
        <label>CSN - Enhancments</label>
        <language>en_US</language>
        <sharedTo>
            <role>DirectorCSNClientServices</role>
            <role>ProductConsultantRFPT1</role>
            <role>ProductConsultantRFPT2</role>
            <role>RelationshipManagerRFP</role>
            <role>VPClientServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Enhancments_Reviewed</fullName>
        <columns>NAME</columns>
        <columns>Release_Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Requesters_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Under Consideration,On Roadmap</value>
        </filters>
        <filters>
            <field>Release_Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>CSN - Enhancments - Reviewed</label>
        <language>en_US</language>
        <sharedTo>
            <role>DirectorCSNClientServices</role>
            <role>ProductConsultantRFPT1</role>
            <role>ProductConsultantRFPT2</role>
            <role>RelationshipManagerRFP</role>
            <role>VPClientServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Planners</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Product__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>pick</value>
        </filters>
        <label>CSN - Planners</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSN_Requests_High_Not_Reviewed_or_Assi</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Area__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Requesters_Priority__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Requesters_Priority__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <label>CSN - High Pri Not Reviewed or Assigned</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Requests_Not_Reviewed_or_Assigned</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Area__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Requesters_Priority__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Reports-CRF,Reports-Document Templates,Reports-HB Client</value>
        </filters>
        <label>CSN Requests - Not Reviewed or Assigned</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Reviewed_Requests</fullName>
        <columns>Requesters_Priority__c</columns>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Under Consideration,On Roadmap</value>
        </filters>
        <filters>
            <field>Release_Status__c</field>
            <operation>equals</operation>
            <value>On Ice</value>
        </filters>
        <label>CSN Reviewed Requests</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Suppliers1</fullName>
        <columns>NAME</columns>
        <columns>Date_Requested__c</columns>
        <columns>Requesters_Priority__c</columns>
        <columns>Description_Business_Case__c</columns>
        <columns>Business_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>contains</operation>
            <value>General-New Feature,Proposal Management-General,Proposal Management-Meeting Ro</value>
        </filters>
        <label>CSN - Suppliers</label>
        <language>en_US</language>
    </listViews>
</CustomObject>